create partials and update root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,38 +8,17 @@
 </head>
 <body>
   
-  <header>
-    
- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">myRecipes</a>
-        </div>
-    
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-       <li><a href="#">Link</a></li>
-
-      </ul>
-      </div>
-      </div>
-      </nav>
-    
-    
-    
-  </header>
+  <%= render 'layouts/navigation' %>
 
 <div class="container">
 <%= yield %>
-<div class="footer">
-  <hr>
-  <p>&copy; MyRecipes 2015</p>
+
+  <%= render 'layouts/footer' %>
+
+
 </div>
-</div>
+
+
 
 </body>
 </html>
